# cias-x-loop

./: .gitignore  pyproject.toml  run_cias_x.py  sci_loop.py
config/: default.yaml
docs/: cias-x-design.md
src/: __init__.py
src/agents/: base.py
src/agents/sci/: analysis.py  executor.py  planner.py  reviewer.py  world_model.py
src/cias_x/: analyst.py  evaluator.py  executor.py  planner.py  state.py  structures.py  world_model.py
src/core/: __init__.py  scientist.py  state.py  workflow_graph.py  world_model_base.py
